Style updates to center and prevent overflowing off screen. Added colors (light blue #efe and #eef for buttons and divs/jumbotrons). Added box shadows and cursor pointer to button items to distinguish them as click/tap-able.

--- a/src/styles/Flashcards.css
+++ b/src/styles/Flashcards.css
@@ -2,34 +2,73 @@ body {
   text-align: center;
 }
 
-button {
+h1,
+h2,
+h3 {
   margin: 4px;
-  padding: 14px;
+  padding: 20px;
+  font-weight: 600;
+  font-size: larger;
+}
+
+button {
+  padding: 12px;
   background: #eef;
   border-radius: 4px;
   color: #5f6368;
+  transition: box-shadow 135ms cubic-bezier(.4,0,.2,1),width 235ms cubic-bezier(.4,0,.2,1);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(128, 128, 128, 0.1) inset;
+  border-color: #dedede;
+  cursor: pointer;
 }
 
 .scoreboard,
-.flashcards-container {
-  max-width: 1920px;
+.flashcards-container,
+.decks {
+  max-width: 920px;
   margin: 10px auto;
+  margin-bottom: 45px;
 }
 
-.grid-div {
+.grid-div,
+.grid-div-even {
   display: grid;
   grid-template-columns: repeat(1, 1fr 10fr 1fr);
   grid-gap: 10px;
+  max-width: 98%;
+  /* prevent CSS grid from overflowing its container */
+  min-width: 0;
+  min-height: 0;
 }
 
 .grid-div-even {
-  display: grid;
   grid-template-columns: repeat(1, 1fr 1fr 1fr);
   grid-gap: 20px;
+}
+
+.grid-item {
+  overflow: hidden;
+  min-width: 0;
 }
 
 .controls {
   width: 100%;
   height: 100%;
   background: #eef;
+  transition: box-shadow 135ms cubic-bezier(.4,0,.2,1),width 235ms cubic-bezier(.4,0,.2,1);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(128, 128, 128, 0.1) inset;
+  border-color: #dedede;
+  cursor: pointer;
+}
+
+.prev {
+  margin-left: 10px;
+}
+
+.card {
+  margin: 0px 4px 0px 12px;
+}
+
+.next {
+  margin-right: 2px;
 }
