--- a/src/styles/Scoreboard.css
+++ b/src/styles/Scoreboard.css
@@ -1,13 +1,8 @@
-.deck {
-  max-height: 250px;
-  overflow: hidden;
-  padding: 9px;
+.scoreboard {
+  padding: 45px;
+  border-radius: 6px;
   background-color: #efe;
   transition: box-shadow 135ms cubic-bezier(.4,0,.2,1),width 235ms cubic-bezier(.4,0,.2,1);
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(128, 128, 128, 0.1) inset;
   border-color: #dedede;
-}
-
-.deck-data {
-  font-size: xx-small;
 }
